# Optim_INSA_5GMM

./: .gitignore  README.md  current_wing  output_test.vtp  set_env.ksh
Apame/: CMakeLists.txt  readme.txt
Apame/modules/: apame_mesh.py  apame_utils.py
Apame/src/: apame.f90  func_IDW.f90  func_message.f90  func_new_line.f90  func_tic.f90  func_title.f90  func_toc.f90  func_vect_ang.f90  func_vect_inprod.f90  func_vect_mod.f90  func_vect_prod.f90  module_grid.f90  module_influence.f90  module_input.f90  module_pressure.f90  module_rhs.f90  module_velocity.f90  subr_results.f90  subr_speeds.f90  subr_write_case.f90  subr_write_coef.f90  subr_write_key.f90  subr_write_ptot.f90  subr_write_time.f90
examples/Apame/test_naca0012/: build_mesh.py  naca0012.vtp
examples/Apame/test_validation/: polar_m6  polar_m6.txt  test_apame.py
examples/Dakota/cx/: OPT_DEFAULT.out  build_mesh.py  dakota.rst  output.vtp  run_apame.py  test.in  wing
examples/Dakota/max_f_0012/: OPT_DEFAULT.out  cobyla.in  current_wing  dakota.rst  genetique.in  myfunc.py  output.vtp  quasi_genetique.in  quasi_newton.in
examples/Dakota/max_f_8415/: OPT_DEFAULT.out  build_optimized_wing.py  cobyla.in  current_wing  dakota.rst  genetique.in  initial.vtp  myfunc.py  output.vtp  quasi_genetique.in  quasi_newton.in
examples/Dakota/min_cx/: OPT_DEFAULT.out  build_optimized_wing.py  cobyla.in  current_wing  dakota.rst  genetique.in  myfunc.py  (+3 more)
modules/: NACA.py  build_initial_wing.py  cherche_min.py  cherche_min_no_constraint.py  create_dakota_file.py  dakota_utils.py  mesh_utils.py  post_treatment.py
(+139 files in other folders)
